--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
-    "daisyui": "^3.6.4"
+    "@types/node": "20.5.9",
+    "@types/react": "18.2.21",
+    "daisyui": "^3.6.4",
+    "typescript": "5.2.2"
   }
 }
