--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@plaiceholder/next": "^3.0.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.15",
