--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "store-tailwind",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@formspree/react": "^2.5.1",
-    "@plaiceholder/next": "^3.0.0",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@vercel/analytics": "^1.0.2",
-    "autoprefixer": "10.4.15",
-    "clsx": "^2.1.1",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "next-themes": "^0.2.1",
-    "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.1.2",
-    "tailwindcss": "3.3.3"
-  },
-  "devDependencies": {
-    "@types/node": "20.5.9",
-    "@types/react": "18.2.21",
-    "daisyui": "^3.6.4",
-    "typescript": "5.2.2"
-  }
+    "name": "store-tailwind",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@formspree/react": "^2.5.1",
+        "@plaiceholder/next": "^3.0.0",
+        "@reduxjs/toolkit": "^1.9.5",
+        "@vercel/analytics": "^1.0.2",
+        "autoprefixer": "10.4.15",
+        "clsx": "^2.1.1",
+        "eslint": "8.48.0",
+        "eslint-config-next": "13.4.19",
+        "framer-motion": "^11.1.9",
+        "next": "^13.5.6",
+        "next-themes": "^0.2.1",
+        "postcss": "8.4.29",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-redux": "^8.1.2",
+        "tailwindcss": "3.3.3"
+    },
+    "devDependencies": {
+        "@types/node": "20.5.9",
+        "@types/react": "18.2.21",
+        "daisyui": "^3.6.4",
+        "typescript": "5.2.2"
+    }
 }
